# peronsal-man

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  404.html  CNAME  README.md  demo.tape  dodo.py  gen_ref_nav.py  index.html  insecure_report.json  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci_pipeline.yml  codeql-analysis.yml  codeql-config.yml  update_docs.yml  upgrade-dependencies.yml  vhs.yml
docs/: README.md  demo.tape  gen_ref_nav.py
docs/Advanced_Documentation/: index.html
docs/CHANGELOG/: index.html
docs/CODE_TAG_SUMMARY/: index.html
docs/DEVELOPER_GUIDE/: index.html
docs/STYLE_GUIDE/: index.html
docs/_docs/: index.html
docs/docs/: CHANGELOG.md  CODE_TAG_SUMMARY.md  DEVELOPER_GUIDE.md
modules/personal_man/_code_diagrams/: index.html
modules/pman/_code_diagrams/: index.html
personal_man/: __init__.py  cli.py  output.py  settings.py  show.py
personal_man/controllers/: show_controller.py
pman/: __init__.py  cli.py  man.py  onboarding.py  output.py  search.py  settings.py  show.py
pman/controllers/: man_controller.py  search_controller.py
reference/SUMMARY/: index.html
reference/personal_man/: index.html
reference/personal_man/cli/: index.html
reference/pman/: index.html
reference/pman/cli/: index.html
search/: search_index.json
tests/: __init__.py  configuration.py  setup_test_dir.sh  test_settings.py  test_zz_personal_man.py  test_zz_pman.py
(+24 files in other folders)
