[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.0.7",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
version_files = ["pyproject.toml", "pman/__init__.py"]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "pman"
length_sort = false
line_length = 120
multi_line_output = 5

[tool.poetry]
name = "pman"
version = "0.0.1"
description = "pman: Personal Manpages"
license = "MIT"
authors = ["Kyle King <dev.act.kyle@gmail.com>"]
maintainers = []
repository = "https://github.com/kyleking/pman"
documentation = "https://github.com/kyleking/pman/docs"
readme = "docs/README.md"
include = ["LICENSE.md"]
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
] # https://pypi.org/classifiers/

[tool.poetry.scripts]
pman = "pman:run"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/kyleking/pman/issues"
"Changelog" = "https://github.com/kyleking/pman/blob/main/docs/docs/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.10.5"
calcipy = ">=0.20.0"
pydantic = ">=1.9.1"
questionary = ">=1.10.0"
rich = ">=12.5.1"

[tool.poetry.dev-dependencies]
calcipy = { version = "*", extras = ["dev", "lint", "test"] }

[tool.poetry.group.dev.dependencies]
pytest-cache-assert = "^3.0.6"
